$Id: ChangeLog,v 1.399 2007/08/29 15:10:19 haraldkipp Exp $

2007-08-29  Harald Kipp  <harald.kipp@egnite.de>

	* os/version.c, configure.ac: Announcing release branch 4.4.

	* arch/avr/include/atom.h: Removed. Had been replaced by
	include/arch/avr/atom.h some time ago.

	* fs/pathops.c, include/fs/fs.h, include/stdio.h: Added missing 
	rename() function call, kindly provided by Andrew Zacharias.

	* Makefile.am: New boot directory for bootloader code.

	* doc/gen/nut_en.cfg.in: Removed non-existing ostracer app.


2007-08-28  Harald Kipp  <harald.kipp@egnite.de>

	* arch/arm/dev/at91_emac.c, arch/arm/dev/uartgba.c,
	arch/avr/dev/ace.c, arch/avr/dev/usart0avr.c, 
	arch/avr/dev/usart1avr.c, c/stdlib/abs.c, c/string/strrchr.c, 
	include/dev/ace.h, include/dev/hd44780.h, include/dev/hd44780_bus.h, 
	include/dev/sbbif3.h, include/fs/phatfs.h, include/netinet/igmp.h,
	include/sys/mutex.h, include/sys/semaphore.h, include/sys/sock_var.h, 
	doc/gen/nutdoc_en.txt, doc/gen/nut_en.cfg.in: Moved to Doxygen 1.5.3. 
	Several documentation typos fixed.


2007-08-17  Harald Kipp  <harald.kipp@egnite.de>

	* include/arch/arm/atom.h: Fixes a long existing and severe 
	porting bug (#1757410). NutEnter/ExitCritical destroyed r0! 
	While this is a temporary register on avr-gcc, arm-elf-gcc
	uses it for passing the first function parameter. This new
	version now also allows nesting by saving the current status 
	register on the stack.

	* arch/arm/include/atom.h: Removed. Had been replaced by
	include/arch/arm/atom.h some time ago.

	* arch/arm/dev/ostimer_at91.c, arch/arm/dev/ostimer_lpc2xxx.c,
	arch/arm/dev/ostimer_s3c4510b.c, include/arch/arm/timer.h:
	Timer enable/disable macro replaces previous global interrupt
	enable/disable or function calling (LPC).

	* dev/at45db.c: Documentation updated.

	* dev/chat.c: Default timeout value specifies seconds, but sets
	timeout in milliseconds. Missing factor 1000 added. Thanks to
	Alex from brumer.com.
